--- a/WeaverCharleyExerciseLayout/css/main.css
+++ b/WeaverCharleyExerciseLayout/css/main.css
@@ -98,3 +98,21 @@ a:hover{
     /*update link hover color*/
     color: rgb(238, 215, 7);
 }
+
+/*CSS Section= Form*/
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 7px;
+}
+
+button{
+    background-color: darkblue;
+    color: white;
+}
+button:hover{
+    color: crimson;
+    background-color: yellow;
+}
